fix & refactor: Clean all compiler deprecations and warnings, rework in-game modules menu with sidebar navigation, add rich per-module settings, and redesign Mod Store